# SAAB-SUITE

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README  README.md  SECURITY.md  can_gateway_linux.py  can_gateway_windows_j2534.py  install-saab-suite.ps1  install-saab-suite.sh  normalize-saab-suite.sh  pyproject.toml  pyproject.toml.bak  remote_tcp_bus.py  requirements.txt  saab-suite-layout.txt  saab-suite.tar.zst  setup.py
.github/workflows/: ci-build.yml  ci-lfs-guard.yml  ci-lint.yml  ci.yml  nightly.yml  release.yml
docs/: README.md  architecture.md  installation.md  supported_vehicles.md  usage.md
docs/architecture/: 0001-hexagonal-architecture.md  0002-can-stack.md  (+5 more)
drivers/: README.md
firmware/: README.md
plugins/saab-suite-af40/: README.md  pyproject.toml
plugins/saab-suite-af40/src/saab_suite_af40/: __init__.py
plugins/saab-suite-haldex/: README.md  pyproject.toml
plugins/saab-suite-haldex/src/saab_suite_haldex/: __init__.py
plugins/saab-suite-trionic/: README.md  pyproject.toml
plugins/saab-suite-trionic/src/saab_suite_trionic/: __init__.py
runtime/: README.md
scripts/: build-release.sh  diagnostic_scan.py  setup.sh  vm-autobuild.ps1  vm-autobuild.sh
src/: __init__.py
src/ui/: app.py  (+1 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_can.py  test_engine.py  test_j2534_gds2_sps.py
tools/: build_all.sh  diagnostic-os.sh  lint.sh  migrate_legacy.py  release.sh  replace_remote_bus.sh  replace_remote_bus.sh.bak  replace_remote_bus.sh.bak.bak  typecheck.sh
vm/: README.md
vms/: README.md
(+233 files in other folders)
